# declarative_data_pipelines

./: .sops.yaml  README.md  flake.nix  generate_presentation.sh  presentation.md
collect_agent/: configuration.nix
common/: configuration.nix  sops.nix  telegraf-environment.nix  virtualbox_network.nix
database_host/: configuration.nix  dashboard.json  devtoken  model_service.nix
model/: .gitignore  Cargo.toml  default.nix
model/src/: main.rs
opc/: configuration.nix  opc_server.nix  server.py
secrets/: influxdb_password  influxdb_token
